2007-02-18  Michael Natterer  <mitch@gimp.org>

	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_set_from_thumb):
	return failure if the thumbnail PNG contains no Thumb::URI tag.

2007-02-18  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimppluginprocedure.[ch]: add "locale_domain" and
	"help_domain" members and APIs to get/set them. Removed locale and
	help domain parameters from all other functions.

	* app/plug-in/gimpplugin.c (gimp_plug_in_add_temp_proc)
	* app/plug-in/plug-in-def.c (plug_in_def_add_procedure)
	(plug_in_def_set_locale_domain_name)
	(plug_in_def_set_help_domain_name): make sure all plug-in procedures
	have locale and help domains.

	* app/plug-in/gimppluginmanager.[ch]: removed function
	gimp_plug_in_manager_get_label().

	* app/plug-in/gimppluginmanager.c
	* app/plug-in/gimpplugin-cleanup.c
	* app/actions/plug-in-actions.c
	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpfileprocview.c
	* app/widgets/gimpimagepropview.c: changed (simplified) accordingly.

2007-02-18  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppixbuf.c (gimp_pixbuf_targets_add): skip Windows
	ICO as writable format. It's not well suited as a general image
	exchange format and the GdkPixbuf save routine seems to be buggy.

2007-02-18  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/png.c: Moved an invariant (in the last
	  changeset to this file) out of the loop.

2007-02-17  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h: Add define for
	symkey() to quiet the compiler.

	* plug-ins/script-fu/tinyscheme/scheme.c (basic_inchar): Return
	blank when invalid UTF-8 character is encountered while reading
	from memory. Point to start of next valid character on error.

2007-02-17  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch]
	* app/core/gimp.c
	* app/widgets/gimpcontrollerinfo.c
	* libgimpwidgets/gimpcontroller.c: removed various boolean_handled