@@ -1,3 +1,9 @@
+2007-02-18  Sven Neumann  <sven@gimp.org>
+
+	* app/actions/edit-commands.c (edit_copy_cmd_callback): show an
+	informational message in the statusbar. There is otherwise no
+	indication that something has happened.
+
 2007-02-18  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_set_from_thumb):
